# ImageDBManager

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ImageTransition.qml  LICENSE  README.md  build.bat  compile_shader.bat  database.cpp  database.h  imageprovider.cpp  imageprovider.h  main.cpp  resource.rc  windeployqt拷贝依赖.txt  着色器过渡实现说明.md
qml/: ColorUtils.js  GroupTree.qml  ImageList.qml  ImageViewer.qml  Main.qml
shaders/: transitions.frag
shaders/qsb/: transitions.frag.qsb
示例/: CMakeLists.txt  ImageTransition.qml  Main.qml  main.cpp
